--- a/branches/trunk_2.0.0/MakeFiles/Watcom/DOS4G/makefile
+++ b/branches/trunk_2.0.0/MakeFiles/Watcom/DOS4G/makefile
@@ -9,6 +9,7 @@ CFLAGS	= -I$(INCLUDE) -bt=DOS4G /oilmrt /s $(CDEFS)
 TOS	= DOS4G
 TNAME	= rntrack_386
 SRCDIR	= ..\..\..\src
+SMAPIDIR= ..\..\..\smapi
 WORKDIR	= $+ $(%cdrive):$(%cwd) $-
 DEBUG	= 0
 #CONFIG	= C:\\ftn\\rntrack.cfg
@@ -26,8 +27,8 @@ OBJS+= passwd.obj wildmat.obj tmstamp.obj badpkt.obj
 OBJS+= sqbase.obj mask.obj getopt.obj cfg.obj utils.obj nodelist.obj
 OBJS+= pktbase.obj script.obj domain.obj filebox.obj string.obj
 
-INCLUDE=..\..\..\hpp;$(SRCDIR)
-LIB=$(SRCDIR)\smapi\smapiwcx.lib
+INCLUDE=..\..\..\hpp;$(SRCDIR);$(SMAPIDIR)\h;$(SMAPIDIR)\src
+LIB=$(SMAPIDIR)\smapiwcx.lib
 
 
 !ifdef ENABLE_SCRIPTS
@@ -111,7 +112,7 @@ $(TNAME).exe : smapi $(OBJS) tmp.lnk
     wlink.exe @tmp.lnk
 
 smapi: .symbolic
-    cd  $(SRCDIR)\smapi
+    cd  $(SMAPIDIR)
     wmake -f makefile.wcx
     cd $(WORKDIR)
 
@@ -128,8 +129,8 @@ tmp.lnk : $(__MAKEFILES__)
     @%append $^@ library $(LIB)
 clean: .symbolic
 	del *.obj
-	del $(SRCDIR)\smapi\*.obj
-	del $(SRCDIR)\smapi\*.lib
+	del $(SMAPIDIR)\*.obj
+	del $(SMAPIDIR)\*.lib
 	del tmp.lnk
 	del $(TNAME).exe
 
