--- a/branches/trunk_2.0.0/MakeFiles/djgpp/Makefile
+++ b/branches/trunk_2.0.0/MakeFiles/djgpp/Makefile
@@ -1,10 +1,12 @@
 # $Id$
 CC	= gxx
-CFLAGS	= -Wall -W -fno-rtti -I../../hpp -I../../src -O3
+SMAPIDIR= ../../smapi
+CFLAGS	= -Wall -W -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src -O3
 CDEFS	= -D__FLAT__ -DNOSEMAPHORES -DHAVE_DOS_H -DHAVE_UNISTD_H -DHAVE_IO_H -DHAS_strupr -DHAVE_LOCALE_H -DHAVE_TIME_H -DHAVE_UTIME_H
-LFLAGS	= -s $(SRCDIR)smapi/smapidjg.a
+LFLAGS	= -s $(SMAPIDIR)/smapidjg.a
 SRCDIR	= ../../src/
 SRCDIR1 = ..\\..\\src\\
+SMAPIDIR1 = ..\\..\\smapi
 EXEEND	= _386.exe
 #CONFIG = c:\\\\ftn\\\\rntrack.cfg
 
@@ -72,14 +74,14 @@ OBJS=	fidoaddr.o \
 # Thunderbirds are go!
 
 smapi:
-	make -C $(SRCDIR)smapi -f makefile.djg
+	make -C $(SMAPIDIR) -f makefile.djg
 
 rntrack: smapi $(OBJS)
 	$(CC) -o rntrack$(EXEEND) $(OBJS) $(LFLAGS)
 
 clean:
-	-del $(SRCDIR1)smapi\\*.o
-	-del $(SRCDIR1)smapi\\*.a
+	-del $(SMAPIDIR1)\\*.o
+	-del $(SMAPIDIR1)\\*.a
 	-del *.o
 	-del  *~
 	-del core
