--- a/branches/trunk_2.0.0/MakeFiles/emx/Makefile.emx
+++ b/branches/trunk_2.0.0/MakeFiles/emx/Makefile.emx
@@ -9,11 +9,12 @@ CC=	gcc
 
 PERL=D:/PERLLIB/LIB/5.00553/os2
 
+SMAPIDIR= ../../smapi
 CFLAGS=	-Wall -fno-rtti -s -g
 CDEFS=	-DOS2 -DEMX -DDO_PERL -DDOSISH -DEMBED -DHAVE_UNISTD_H -DHAVE_IO_H -DHAS_strupr -DHAVE_LOCALE_H -DHAVE_TIME_H -DHAVE_UTIME_H
-COPT=	-I../../hpp -I../../.. -I$(SRCDIR) -I$(PERL)/CORE -O3
+COPT=	-I../../hpp -I../../.. -I$(SRCDIR) -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src -I$(PERL)/CORE -O3
 SRCDIR= ../../src/
-LFLAGS=	-Zcrtdll -L../../src/smapi -lsmapiemx -g
+LFLAGS=	-Zcrtdll -L$(SMAPIDIR) -lsmapiemx -g
 EXEEND= _os2.exe
 STRIP=	-s
 
