--- a/branches/trunk_2.0.0/MakeFiles/msvc/vs2010/smapi.vcxproj
+++ b/branches/trunk_2.0.0/MakeFiles/msvc/vs2010/smapi.vcxproj
@@ -89,10 +89,13 @@
     <Bscmake>
       <PreserveSBR>true</PreserveSBR>
     </Bscmake>
+    <Lib>
+      <TargetMachine>MachineX86</TargetMachine>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>__NT__;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__NT__;_WIN64;__x86_64__;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -106,6 +109,9 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <Lib />
+    <Lib>
+      <TargetMachine>MachineX64</TargetMachine>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -123,10 +129,13 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <Lib>
+      <TargetMachine>MachineX86</TargetMachine>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>__NT__;_WIN64;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__NT__;_WIN64;__x86_64__;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -139,20 +148,23 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <Lib>
+      <TargetMachine>MachineX64</TargetMachine>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\smapi\src\1stchar.c" />
     <ClCompile Include="..\..\..\smapi\src\api_jam.c" />
     <ClCompile Include="..\..\..\smapi\src\api_sdm.c" />
-    <ClCompile Include="..\..\..\smapi\src\cvtdate.c" />
     <ClCompile Include="..\..\..\smapi\src\date2bin.c" />
     <ClCompile Include="..\..\..\smapi\src\dosdate.c" />
     <ClCompile Include="..\..\..\smapi\src\fexist.c" />
     <ClCompile Include="..\..\..\smapi\src\ffind.c" />
     <ClCompile Include="..\..\..\smapi\src\flush.c" />
+    <ClCompile Include="..\..\..\smapi\src\ftnaddr.c" />
     <ClCompile Include="..\..\..\smapi\src\genmsgid.c" />
     <ClCompile Include="..\..\..\smapi\src\gnmsgid.c" />
     <ClCompile Include="..\..\..\smapi\src\locking.c" />
+    <ClCompile Include="..\..\..\smapi\src\memory.c" />
     <ClCompile Include="..\..\..\smapi\src\months.c" />
     <ClCompile Include="..\..\..\smapi\src\msgapi.c" />
     <ClCompile Include="..\..\..\smapi\src\parsenn.c" />
@@ -170,16 +182,14 @@
     <ClCompile Include="..\..\..\smapi\src\sq_read.c" />
     <ClCompile Include="..\..\..\smapi\src\sq_uid.c" />
     <ClCompile Include="..\..\..\smapi\src\sq_write.c" />
-    <ClCompile Include="..\..\..\smapi\src\strextra.c" />
+    <ClCompile Include="..\..\..\smapi\src\strext.c" />
     <ClCompile Include="..\..\..\smapi\src\strftim.c" />
-    <ClCompile Include="..\..\..\smapi\src\strocpy.c" />
     <ClCompile Include="..\..\..\smapi\src\structrw.c" />
     <ClCompile Include="..\..\..\smapi\src\tdelay.c" />
     <ClCompile Include="..\..\..\smapi\src\trail.c" />
     <ClCompile Include="..\..\..\smapi\src\weekday.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\smapi\src\flushasm.asm" />
     <None Include="..\..\..\smapi\makefile.inc" />
     <None Include="..\..\..\smapi\src\sqasm.asm" />
   </ItemGroup>
@@ -192,19 +202,46 @@
     <ClInclude Include="..\..\..\smapi\h\api_sdmp.h" />
     <ClInclude Include="..\..\..\smapi\h\api_sq.h" />
     <ClInclude Include="..\..\..\smapi\h\api_sqp.h" />
+    <ClInclude Include="..\..\..\smapi\h\bcd.h" />
+    <ClInclude Include="..\..\..\smapi\h\bco.h" />
+    <ClInclude Include="..\..\..\smapi\h\bcw.h" />
+    <ClInclude Include="..\..\..\smapi\h\beos5.h" />
+    <ClInclude Include="..\..\..\smapi\h\borlandc.h" />
     <ClInclude Include="..\..\..\smapi\h\compiler.h" />
     <ClInclude Include="..\..\..\smapi\h\cvsdate.h" />
+    <ClInclude Include="..\..\..\smapi\h\djgpp.h" />
     <ClInclude Include="..\..\..\smapi\h\dr.h" />
+    <ClInclude Include="..\..\..\smapi\h\emx.h" />
     <ClInclude Include="..\..\..\smapi\h\ffind.h" />
+    <ClInclude Include="..\..\..\smapi\h\ftnaddr.h" />
+    <ClInclude Include="..\..\..\smapi\h\genmsgid.h" />
+    <ClInclude Include="..\..\..\smapi\h\highc.h" />
+    <ClInclude Include="..\..\..\smapi\h\ibmc_os2.h" />
+    <ClInclude Include="..\..\..\smapi\h\locking.h" />
+    <ClInclude Include="..\..\..\smapi\h\memory.h" />
+    <ClInclude Include="..\..\..\smapi\h\mingw32.h" />
+    <ClInclude Include="..\..\..\smapi\h\months.h" />
+    <ClInclude Include="..\..\..\smapi\h\msc.h" />
     <ClInclude Include="..\..\..\smapi\h\msgapi.h" />
+    <ClInclude Include="..\..\..\smapi\h\msvc.h" />
     <ClInclude Include="..\..\..\smapi\h\old_msg.h" />
     <ClInclude Include="..\..\..\smapi\h\patmat.h" />
     <ClInclude Include="..\..\..\smapi\h\prog.h" />
     <ClInclude Include="..\..\..\smapi\h\progprot.h" />
+    <ClInclude Include="..\..\..\smapi\h\pstdint.h" />
+    <ClInclude Include="..\..\..\smapi\h\sasc.h" />
     <ClInclude Include="..\..\..\smapi\h\stamp.h" />
+    <ClInclude Include="..\..\..\smapi\h\strext.h" />
     <ClInclude Include="..\..\..\smapi\h\strextra.h" />
     <ClInclude Include="..\..\..\smapi\h\typedefs.h" />
+    <ClInclude Include="..\..\..\smapi\h\typesize.h" />
+    <ClInclude Include="..\..\..\smapi\h\unix.h" />
     <ClInclude Include="..\..\..\smapi\h\unused.h" />
+    <ClInclude Include="..\..\..\smapi\h\watcomc.h" />
+    <ClInclude Include="..\..\..\smapi\h\wcd.h" />
+    <ClInclude Include="..\..\..\smapi\h\wco.h" />
+    <ClInclude Include="..\..\..\smapi\h\wcw.h" />
+    <ClInclude Include="..\..\..\smapi\h\wcx.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
