--- a/branches/trunk_2.0.0/MakeFiles/emx/Makefile.emx
+++ b/branches/trunk_2.0.0/MakeFiles/emx/Makefile.emx
@@ -22,36 +22,39 @@ ALL: rntrack$(EXEEND)
 
 TARGET= f
 
-OBJS=	fidoaddr.o \
-	log.o \
+OBJS= \
 	age.o \
+	aix_conv.o \
 	aka.o \
 	attach.o \
 	badmsg.o \
+	badpkt.o \
 	cfg.o \
 	configure.o \
-	rntrack.o \
+	dirent.o \
+	domain.o \
+	fidoaddr.o \
+	filebox.o \
 	getopt.o \
 	help.o \
+	log.o \
+	mask.o \
 	msg.o \
 	msgbase.o \
 	nodelist.o \
-	vars.o \
 	outbound.o \
 	parsetpl.o \
 	passwd.o \
 	pktbase.o \
+	rntrack.o \
 	scandir.o \
+	script.o \
 	sqbase.o \
+	string.o \
 	tmstamp.o \
 	utils.o \
-	mask.o  \
-	wildmat.o \
-	badpkt.o \
-	script.o \
-	domain.o \
-	filebox.o \
-	string.o
+	vars.o \
+	wildmat.o
 
 PERLLIBS=\
         $(PERL)/auto/DB_File/DB_File.a \
