--- a/branches/trunk_2.0.0/configure.ac
+++ b/branches/trunk_2.0.0/configure.ac
@@ -138,6 +138,6 @@ AC_ARG_ENABLE(scripts,		 [  --enable-scripts		 enable Perl-scripting (auto)],
 
 
 AC_CONFIG_FILES([Makefile
-		 src/smapi/Makefile
+		 smapi/Makefile
 		 src/Makefile])
 AC_OUTPUT
