--- a/branches/trunk_2.0.0/MakeFiles/aix/makefile
+++ b/branches/trunk_2.0.0/MakeFiles/aix/makefile
@@ -32,37 +32,39 @@ endif
 
 all: rntrack
 
-OBJS=	fidoaddr.o \
-	log.o \
+OBJS= \
 	age.o \
+	aix_conv.o \
 	aka.o \
 	attach.o \
 	badmsg.o \
+	badpkt.o \
 	cfg.o \
 	configure.o \
-	rntrack.o \
+	dirent.o \
+	domain.o \
+	fidoaddr.o \
+	filebox.o \
 	getopt.o \
 	help.o \
+	log.o \
+	mask.o \
 	msg.o \
 	msgbase.o \
 	nodelist.o \
-	vars.o \
 	outbound.o \
 	parsetpl.o \
 	passwd.o \
 	pktbase.o \
+	rntrack.o \
 	scandir.o \
+	script.o \
 	sqbase.o \
+	string.o \
 	tmstamp.o \
 	utils.o \
-	mask.o \
-	script.o \
-	wildmat.o \
-	badpkt.o \
-	aix_conv.o \
-	domain.o \
-	filebox.o \
-	string.o
+	vars.o \
+	wildmat.o
 
 %.o: %.c
 	$(CC) $(CFLAGS) $(CDEFS) -c $<
