--- a/branches/trunk_2.0.0/smapi/makefile.inc
+++ b/branches/trunk_2.0.0/smapi/makefile.inc
@@ -9,6 +9,86 @@ VER  =  2.4.0
 SRCDIR = src
 HDIR   = h
 
-OBJS	= 1stchar$(OBJ) api_sdm$(OBJ) sq_area$(OBJ) sq_hash$(OBJ) sq_help$(OBJ) sq_idx$(OBJ)  sq_kill$(OBJ) sq_lock$(OBJ) sq_misc$(OBJ) sq_msg$(OBJ) sq_read$(OBJ) sq_uid$(OBJ) sq_write$(OBJ) api_jam$(OBJ) cvtdate$(OBJ) date2bin$(OBJ) dosdate$(OBJ) fexist$(OBJ) ffind$(OBJ) flush$(OBJ) locking$(OBJ) months$(OBJ) msgapi$(OBJ) parsenn$(OBJ) patmat$(OBJ) qksort$(OBJ) strextra$(OBJ) strftim$(OBJ) strocpy$(OBJ) structrw$(OBJ) trail$(OBJ) weekday$(OBJ) setfsize$(OBJ) tdelay$(OBJ) genmsgid$(OBJ)
+OBJS	= api_jam$(OBJ) \
+          api_sdm$(OBJ) \
+          date2bin$(OBJ) \
+          dosdate$(OBJ) \
+          fexist$(OBJ) \
+          ffind$(OBJ) \
+          flush$(OBJ) \
+          ftnaddr$(OBJ) \
+          genmsgid$(OBJ) \
+          gnmsgid$(OBJ) \
+          locking$(OBJ) \
+          memory$(OBJ) \
+          months$(OBJ) \
+          msgapi$(OBJ) \
+          parsenn$(OBJ) \
+          patmat$(OBJ) \
+          qksort$(OBJ) \
+          setfsize$(OBJ) \
+          sq_area$(OBJ) \
+          sq_hash$(OBJ) \
+          sq_help$(OBJ) \
+          sq_idx$(OBJ) \
+          sq_kill$(OBJ) \
+          sq_lock$(OBJ) \
+          sq_misc$(OBJ) \
+          sq_msg$(OBJ) \
+          sq_read$(OBJ) \
+          sq_uid$(OBJ) \
+          sq_write$(OBJ) \
+          strext$(OBJ) \
+          strftim$(OBJ) \
+          structrw$(OBJ) \
+          tdelay$(OBJ) \
+          trail$(OBJ) \
+          weekday$(OBJ)
 
-HEADERS	= $(addprefix $(HDIR)/,api_brow.h api_jam.h compiler.h ffind.h msgapi.h patmat.h prog.h progprot.h stamp.h typedefs.h unused.h)
+HEADERS	= $(addprefix $(HDIR)/,api_brow.h \
+                               apidebug.h \
+                               api_jam.h \
+                               api_jamp.h \
+                               api_sdm.h \
+                               api_sdmp.h \
+                               api_sq.h \
+                               api_sqp.h \
+                               BCD.h \
+                               BCO.h \
+                               BCW.h \
+                               BEOS5.h \
+                               BORLANDC.h \
+                               compiler.h \
+                               cvsdate.h \
+                               DJGPP.h \
+                               dr.h \
+                               EMX.h \
+                               ffind.h \
+                               ftnaddr.h \
+                               genmsgid.h \
+                               HIGHC.h \
+                               IBMC_OS2.h \
+                               locking.h \
+                               memory.h \
+                               MINGW32.h \
+                               months.h \
+                               MSC.h \
+                               msgapi.h \
+                               MSVC.h \
+                               old_msg.h \
+                               patmat.h \
+                               prog.h \
+                               progprot.h \
+                               pstdint.h \
+                               SASC.h \
+                               stamp.h \
+                               strext.h \
+                               typedefs.h \
+                               typesize.h \
+                               UNIX.h \
+                               unused.h \
+                               WATCOMC.h \
+                               WCD.h \
+                               WCO.h \
+                               WCW.h \
+                               WCX.h)
