--- a/smapi/makefile.lnx
+++ b/smapi/makefile.lnx
@@ -3,7 +3,7 @@
 # No support for the Husky build environment
 
 CC=	gcc
-CFLAGS=	-Wall -funsigned-char -Ih
+CFLAGS=	-Wall -fPIC -funsigned-char -Ih
 CDEFS=	-DUNIX
 COPT=	-O3
 OBJ=	.o
