--- a/smapi/makefile.bsd
+++ b/smapi/makefile.bsd
@@ -8,7 +8,7 @@
 
 prefix=	/usr/local
 CC=	cc
-CFLAGS=	-Wall
+CFLAGS=	-Wall -I../h
 CDEFS=	-DUNIX
 COPT=	-O3
 NAMEOPT=-o
@@ -41,8 +41,7 @@ RMFLAGS=-f
 
 .include "makefile.inc"
 
-#.c.o:
-%.o: $(SRCDIR)/%.c
+.c.o:
 	$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
 
 all: $(TARGET) $(PROGRAMS)
