--- a/smapi/makefile.lnx
+++ b/smapi/makefile.lnx
@@ -2,32 +2,35 @@
 # Legacy makefile for building on Linux with gcc
 # No support for the Husky build environment
 
-ifeq ($(USE_CLANG), 1)
-    CC = clang
-    CFLAGS = -O3 -Wall -Wextra -funsigned-char -Ih
+ifeq ($(USE_MUSL), 1)
+    CC := $(ARCH)-linux-musl-gcc
+    CFLAGS := -Wall -fPIC -funsigned-char -Ih
+else ifeq ($(USE_CLANG), 1)
+    CC := clang
+    CFLAGS := -O3 -Wall -Wextra -funsigned-char -Ih
 else
-    CC = gcc
-    CFLAGS = -Wall -fPIC -funsigned-char -Ih
+    CC := gcc
+    CFLAGS := -Wall -fPIC -funsigned-char -Ih
 endif
 
-CDEFS=	-DUNIX
-COPT=	-O3
-OBJ=	.o
+ifeq ($(ARCH), i486)
+    CFLAGS += -march=i486
+else ifeq ($(ARCH), i686)
+    CFLAGS += -march=i686
+endif
 
-# on i386, you may add this
-# -fomit-frame-pointer -fstrength-reduce -fPIC -m486
+CDEFS := -DUNIX
+COPT := -O3
+OBJ := .o
 
-LIB=	ar
-RANLIB= ranlib
+LIB := ar
+RANLIB := ranlib
 
-TARGET=	libsmapilnx.a
+TARGET := libsmapilnx.a
 
 all: $(TARGET)
 
 include makefile.inc
-
-
-# Thunderbirds are go!
 
 #.c.o:
 %.o: $(SRCDIR)/%.c
